[gd_scene load_steps=20 format=3 uid="uid://dla7322gqg01h"]

[ext_resource type="Texture2D" uid="uid://dxo4nnx3xrdkh" path="res://assets/title.png" id="1_61u86"]
[ext_resource type="Script" uid="uid://cy70c8x8yfiwe" path="res://scripts/title_screen.gd" id="1_dc4i4"]
[ext_resource type="Texture2D" uid="uid://ygmlt2wyfs2k" path="res://assets/menu_background.png" id="1_mgrm8"]
[ext_resource type="Texture2D" uid="uid://ckpx50ngtnrok" path="res://assets/table_menu.png" id="2_dc4i4"]
[ext_resource type="Texture2D" uid="uid://c71ubbhal4f36" path="res://assets/allarm_clock.png" id="4_e54dn"]
[ext_resource type="Texture2D" uid="uid://b17ern8mqlwwl" path="res://assets/allarm_clock-Sheett.png" id="6_e54dn"]
[ext_resource type="AudioStream" uid="uid://dsb3iybj467np" path="res://assets/beep-329314 (1).mp3" id="7_3yumr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3yumr"]
atlas = ExtResource("6_e54dn")
region = Rect2(780, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_e54dn"]
atlas = ExtResource("6_e54dn")
region = Rect2(260, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs5ya"]
atlas = ExtResource("6_e54dn")
region = Rect2(0, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_mykxm"]
atlas = ExtResource("6_e54dn")
region = Rect2(260, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_tklts"]
atlas = ExtResource("6_e54dn")
region = Rect2(1560, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_u26n3"]
atlas = ExtResource("6_e54dn")
region = Rect2(1300, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib7db"]
atlas = ExtResource("6_e54dn")
region = Rect2(520, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_mynnq"]
atlas = ExtResource("6_e54dn")
region = Rect2(520, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_frs5l"]
atlas = ExtResource("6_e54dn")
region = Rect2(1040, 0, 260, 145)

[sub_resource type="SpriteFrames" id="SpriteFrames_mynnq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yumr")
}],
"loop": true,
"name": &"exit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e54dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e54dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mykxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tklts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u26n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib7db")
}],
"loop": false,
"name": &"intro",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mynnq")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_frs5l")
}],
"loop": true,
"name": &"play",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8tpv"]
size = Vector2(54, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qe4i"]
size = Vector2(12, 13)

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_dc4i4")

[node name="LeaveItThere" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_mgrm8")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_mgrm8")

[node name="Table" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_dc4i4")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(-31, -44)
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_61u86")

[node name="Alarm" type="Sprite2D" parent="."]
position = Vector2(9, -3)
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_e54dn")

[node name="Buttons" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mynnq")
animation = &"normal"

[node name="PlayButton" type="Area2D" parent="Buttons"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/PlayButton"]
position = Vector2(-100, 39)
shape = SubResource("RectangleShape2D_e8tpv")

[node name="ExitButton" type="Area2D" parent="Buttons"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/ExitButton"]
position = Vector2(-53, 35.5)
shape = SubResource("RectangleShape2D_4qe4i")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="AudioListener2D" type="AudioListener2D" parent="Camera2D"]
current = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3yumr")

[connection signal="mouse_entered" from="Buttons/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/ExitButton" to="." method="_on_exit_button_mouse_exited"]
